# Django-Template-Task

./: README.md
src/: pyproject.toml
src/config/: settings.py  urls.py
src/home/: forms.py  models.py  urls.py  utils.py  views.py
src/templates/: 404.html  base.html  navbar.html  passenger-create.html  passenger-update.html  titanic.html
