[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["specter <mehdimirzaie1378@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.1"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
Django = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false